@@ -785,5 +785,54 @@ public class RecommendationConstants {
             public static final Integer COST_ACCELERATOR_PERCENTILE = 60;
             public static final Integer PERFORMANCE_ACCELERATOR_PERCENTILE = 98;
         }
+
+        public static class RuntimeConstants {
+            public static final Double DEFAULT_MAX_RAM_PERCENTAGE_VALUE = 80.0;
+            public static final Double MAX_RAM_PERCENTAGE_50 = 50.0;
+            public static final String GPU = "gpu";
+
+            public static final double MEMORY_THRESHOLD_G1GC = 4096.0;
+            public static final int CPU_CORES_THRESHOLD_SERIAL = 1;
+            public static final int CPU_CORES_THRESHOLD_PARALLEL = 2;
+            public static final double RAM_PERCENTAGE_THRESHOLD_BELOW_ONE_CPU_CORE = 10.0;
+            public static final double RAM_PERCENTAGE_THRESHOLD_ONE_CPU_CORE = 5.0;
+            public static final double RAM_PERCENTAGE_THRESHOLD_256MB = 256.0;
+            public static final double RAM_PERCENTAGE_THRESHOLD_512MB = 512.0;
+            public static final double RAM_PERCENTAGE_THRESHOLD_4096MB = 4096.0;
+            public static final double RAM_PERCENTAGE_THRESHOLD_8192MB = 8192.0;
+
+
+            public static final double MEMORY_THRESHOLD_BALANCED_GC = 4096.0;
+            public static final int THREADS_PER_CORE = 1;
+            public static final int MIN_CORE_THREADS = 1;
+            public static final int MAX_CORE_THREADS = 100;
+
+            // GC Policy
+            public static final String GC_BALANCED = "-Xgcpolicy:balanced";
+            public static final String GC_GENCON = "-Xgcpolicy:gencon";
+            public static final String GC_SERIAL = "-XX:+UseSerialGC";
+            public static final String GC_PARALLEL = "-XX:+UseParallelGC";
+            public static final String GC_ZGC = "-XX:+UseZGC";
+            public static final String GC_SHENANDOAH = "-XX:+UseShenandoahGC";
+            public static final String GC_G1GC = "-XX:+UseG1GC";
+
+            // JDK version thresholds
+            public static final int JDK_VERSION_SHENANDOAH = 11;
+            public static final int JDK_VERSION_ZGC = 17;
+            public static final int JDK_VERSION_SERVER_FLAG_THRESHOLD = 8;
+        }
+
+        public static final class TunablesConstants {
+            private TunablesConstants() {}
+
+            // Container tunables
+            public static final String MEMORY_LIMIT = "memoryLimit";
+            public static final String CPU_LIMIT =  "cpuLimit";
+            // Hotspot tunables
+            public static final String MAX_RAM_PERC = "MaxRAMPercentage";
+            public static final String GC_POLICY = "GCPolicy";
+            // Quarkus tunables
+            public static final String QUARKUS_THREAD_POOL_CORE_THREADS = "quarkus.thread-pool.core-threads";
+        }
     }
 }
